# nn

./: .gitignore  CMakeLists.txt  main.c  matrix.c  matrix.h
